--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # ussie
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/ijlyttle/ussie/workflows/R-CMD-check/badge.svg)](https://github.com/ijlyttle/ussie/actions)
 <!-- badges: end -->
 
 The goal of ussie is to make a first attempt at a demo package for folks to build for the "Building Tidy Tools" course at rstudio::conf(2022L).
