add notes on what I used so far

--- a/README.Rmd
+++ b/README.Rmd
@@ -30,3 +30,39 @@ You can install the development version of ussie from [GitHub](https://github.co
 # install.packages("devtools")
 devtools::install_github("ijlyttle/ussie")
 ```
+
+## Notes
+
+I want to note the functions that I used to manage the development of this package:
+
+[Package-development setup](https://r-pkgs.org/setup.html#personal-startup-configuration):
+
+- `usethis::edit_r_profile()`
+
+[Git setup](https://r-pkgs.org/git.html#git-setup) - good for git setup, but current tidyverse recommendation is to use https rather than ssh:
+
+- `gert::git_config_global_set()` can use for `"user.name"`, `"user.email"`
+- `usethis::git_vaccinate()`
+- `usethis::git_default_branch_configure()` set default for future repos
+  - `usethis::git_default_branch_rename()` rename default branch of existing repo
+  
+[GitHub setup](https://usethis.r-lib.org/articles/git-credentials.html):
+
+- `usethis::create_github_token()`
+- `gitcreds::gitcreds_set()`
+
+Verification:
+
+- `usethis::git_sitrep()`
+
+Development:
+
+- `usethis::create_package()`
+- `usethis::use_git()`
+- `usethis::use_github()`
+- `usethis::use_readme_rmd()`
+- `usethis::use_package()`
+- `usethis::use_test()`
+- `usethis::use_github_action_check_release()` minimal check 
+  - `usethis::use_github_action_check__standard()` if thinking of CRAN
+- `usethis::use_tidy_eval()`
