add package-doc, import tibble::tibble()

--- a/README.Rmd
+++ b/README.Rmd
@@ -66,3 +66,4 @@ Development:
 - `usethis::use_github_action_check_release()` minimal check 
   - `usethis::use_github_action_check__standard()` if thinking of CRAN
 - `usethis::use_tidy_eval()`
+- `usethis::use_package_doc()`, then `usethis::use_tibble()` - so this may have to be earlier in the process.
