--- a/README.Rmd
+++ b/README.Rmd
@@ -67,3 +67,4 @@ Development:
   - `usethis::use_github_action_check__standard()` if thinking of CRAN
 - `usethis::use_tidy_eval()`
 - `usethis::use_package_doc()`, then `usethis::use_tibble()` - so this may have to be earlier in the process.
+- `usethis::use_pkgdown()`, `usethis::use_github_action("pkgdown")`
