--- a/README.Rmd
+++ b/README.Rmd
@@ -68,3 +68,4 @@ Development:
 - `usethis::use_tidy_eval()`
 - `usethis::use_package_doc()`, then `usethis::use_tibble()` - so this may have to be earlier in the process.
 - `usethis::use_pkgdown()`, `usethis::use_github_action("pkgdown")`
+- `usethis::use_github_pages()`: configure GH pages once the pkg action succeds, wait a minute et voilà!
