--- a/README.Rmd
+++ b/README.Rmd
@@ -71,3 +71,5 @@ Development:
 - `usethis::use_github_pages()`: configure GH pages once the pkg action succeds, wait a minute et voilà!
 - `usethis::pr_init()`, `usethis::pr_push()`, `usethis::pr_finish()`, `usethis::pr_resume()`
 - `usethis::use_news_md()`
+
+note, we need {shiny}, {diffviewer} to review snapshot tests
