--- a/vignettes/ussie.Rmd
+++ b/vignettes/ussie.Rmd
@@ -83,8 +83,44 @@ You can see that each match is represented twice: once for the home team and onc
 
 We have another form: a `seasons` tibble.
 These contain results accumulated over seasons.
-We have a couple of functions:
+We have a couple of functions, each takes a `teams_matches` data frame:
 
-  - `uss_
-if you want cumulative (in-season) results,
+  - `uss_make_seasons_cumulative()`: returns cumulative results following every team's matches.
+  - `uss_make_seasons_final()`: returns results at the end of each team's seasons.
+  
+For each of these functions, the columns returned are the same: `matches`, `wins`, `losses`, etc:
+  
+```{r uss_make_seasons_cumulative}
+england_1_1990 |>
+  uss_make_seasons_cumulative() |>
+  arrange(team, date)
+```
 
+```{r uss_make_seasons_final}
+england_1_1990 |>
+  uss_make_seasons_final() |>
+  arrange(desc(points))
+```
+
+You can call these functions has an optional argument to specify points-per-win.
+This argument, `fn_points_per_win` is meant to be a function, when called with arguments `country` and `season`, returns the number of points for a win that season.
+A default, `uss_points_per_win()`, is provided:
+
+```{r uss_points_per_win}
+uss_points_per_win("england", 1980)
+```
+
+Any function you provide must be vectorised over `country` and `season`:
+
+```{r uss_points_per_win2}
+uss_points_per_win(c("england", "england"), c(1980, 1981))
+```
+
+If you just want to specify a constant two or three points per season, you can provide an anonymous function.
+If you are using R > 4.1.0, you can use the new syntax:
+
+```{r uss_points_per_win3}
+p <- \(...) 3 # use dots to allow unspecified arguments to pass
+
+p("england", 1066)
+```
