--- a/vignettes/ussie.Rmd
+++ b/vignettes/ussie.Rmd
@@ -30,6 +30,8 @@ conflicted::conflict_prefer("filter", "dplyr")
 You can use the ussie package to work with data for league-play matches for European Football Leagues.
 The data is provided by James Curley's [**engsoccerdata**](https://CRAN.R-project.org/package=engsoccerdata) package: the CRAN version has results through summer 2016; the [GitHub version](https://github.com/jalapic/engsoccerdata) has more-recent results. 
 
+## Get match results
+
 To find out which leagues are available, use `uss_countries()`:
 
 ```{r uss_countries}
@@ -51,6 +53,8 @@ uss_get_matches(
   home == "Leeds United" | visitor == "Leeds United"
 )
 ```
+
+## Get match results for teams
 
 In a `matches` tibble, each row is a unique football match. 
 To make calculations over the course of a team's season, it may be useful to provide an additional form: a `teams_matches` tibble. 
@@ -74,3 +78,49 @@ england_1_1990 |>
   filter(date == as.Date("1990-09-29"))
 ```
 You can see that each match is represented twice: once for the home team and once for the visiting team.
+
+## Get season results
+
+We have another form: a `seasons` tibble.
+These contain results accumulated over seasons.
+We have a couple of functions, each takes a `teams_matches` data frame:
+
+  - `uss_make_seasons_cumulative()`: returns cumulative results following every team's matches.
+  - `uss_make_seasons_final()`: returns results at the end of each team's seasons.
+  
+For each of these functions, the columns returned are the same: `matches`, `wins`, `losses`, etc:
+  
+```{r uss_make_seasons_cumulative}
+england_1_1990 |>
+  uss_make_seasons_cumulative() |>
+  arrange(team, date)
+```
+
+```{r uss_make_seasons_final}
+england_1_1990 |>
+  uss_make_seasons_final() |>
+  arrange(desc(points))
+```
+
+You can call these functions has an optional argument to specify points-per-win.
+This argument, `fn_points_per_win` is meant to be a function, when called with arguments `country` and `season`, returns the number of points for a win that season.
+A default, `uss_points_per_win()`, is provided:
+
+```{r uss_points_per_win}
+uss_points_per_win("england", 1980)
+```
+
+Any function you provide must be vectorised over `country` and `season`:
+
+```{r uss_points_per_win2}
+uss_points_per_win(c("england", "england"), c(1980, 1981))
+```
+
+If you just want to specify a constant two or three points per season, you can provide an anonymous function.
+If you are using R > 4.1.0, you can use the new syntax:
+
+```{r uss_points_per_win3}
+p <- \(...) 3 # use dots to allow unspecified arguments to pass
+
+p("england", 1066)
+```
