--- a/README.Rmd
+++ b/README.Rmd
@@ -67,6 +67,7 @@ Development:
   - `usethis::use_github_action_check_standard()` if thinking of CRAN
 - `usethis::use_package_doc()`, then `usethis::use_tibble()` 
   -  add `#' @importFrom rlang .data` to `ussie-package.R` - prefer this to `usethis::use_tidy_eval()` 
+  -  even better: `usethis::use_import_from()`, e.g. `usethis::use_import_from("rlang", ".data")`
 - `usethis::use_pkgdown()`, `usethis::use_github_action("pkgdown")`
 - `usethis::use_github_pages()`: configure GH pages once the pkg action succeds, wait a minute et voilà!
 - `usethis::pr_init()`, `usethis::pr_push()`, `usethis::pr_finish()`, `usethis::pr_resume()`
