first version of `uss_make_matches()`

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/ijlyttle/ussie/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/ijlyttle/ussie/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The goal of ussie is to demonstrate how build a package and functions for the "Building Tidy Tools" course at rstudio::conf(2022L).
+The goal of ussie is to demonstrate how to build a package and functions for the "Building Tidy Tools" course at rstudio::conf(2022L).
 
 ## Installation
 
@@ -29,5 +29,9 @@ You can install the development version of ussie from [GitHub](https://github.co
 # install.packages("devtools")
 devtools::install_github("ijlyttle/ussie")
 ```
+
+
+
+
 
 
