update to rstudio-conf-2022

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 # ussie
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/ijlyttle/ussie/workflows/R-CMD-check/badge.svg)](https://github.com/ijlyttle/ussie/actions)
+[![R-CMD-check](https://github.com/rstudio-conf-2022/ussie/workflows/R-CMD-check/badge.svg)](https://github.com/rstudio-conf-2022/ussie/actions)
 <!-- badges: end -->
 
 The goal of ussie is to make a first attempt at a demo package for folks to build for the "Building Tidy Tools" course at rstudio::conf(2022L).
@@ -28,7 +28,7 @@ You can install the development version of ussie from [GitHub](https://github.co
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("ijlyttle/ussie")
+devtools::install_github("rstudio-conf-2022/ussie")
 ```
 
 ## Notes
