add validation and filtering

--- a/vignettes/ussie.Rmd
+++ b/vignettes/ussie.Rmd
@@ -43,6 +43,19 @@ italy_matches <-
   glimpse()
 ```
 
+We can add filtering conditions:
+
+```{r uss_get_matches_filter}
+uss_get_matches("england", season == 1966) |>
+  glimpse()
+```
+
+
+
+
+
+
+
 
 
 
